--- a/.verb.md
+++ b/.verb.md
@@ -1,37 +1,29 @@
-# {%= name %} {%= badge("fury") %}
-
-> {%= description %}
-
-## Install
-{%= include("install-npm", {save: true}) %}
-
 ## Usage
 
 ```js
-var assemblePermalinks = require('{%= name %}');
+var permalinks = require('{%= name %}');
+var assemble = require('assemble');
+
+var app = assemble();
+
+// register the plugin, optionally passing a
+// default permalink pattern to use as an argument
+// to the plugin
+app.use(permalinks());
 ```
 
-## API
-<!-- add a path or glob pattern for files with code comments to use for docs  -->
-{%%= apidocs("index.js") %}
+**Example usage**
 
-## Related projects
-<!-- add an array of related projects, then un-escape the helper -->
-{%%= related([]) %}  
+```js
+// create a view collection
+app.create('pages');
 
-## Running tests
-{%= include("tests") %}
+// add a page  
+app.page('a/b/c.txt', {content: '...'})
+  .permalink(':name.html');
 
-## Contributing
-{%= include("contributing") %}
+var page = app.pages.getView('a/b/c.txt');
+console.log(page.data.permalink);
+//=> 'c.html'
+```
 
-## Author
-{%= include("author") %}
-
-## License
-{%= copyright() %}
-{%= license() %}
-
-***
-
-{%= include("footer") %}
