adds pipeline plugin docs

--- a/.verb.md
+++ b/.verb.md
@@ -27,3 +27,21 @@ console.log(page.data.permalink);
 //=> 'c.html'
 ```
 
+**Pipeline plugin**
+
+```js
+var posts = app.create('posts')
+  .use(permalink('actual/:name/index.html'));
+
+app.task('site', function() {
+  return posts.src('*.js')
+    .pipe(posts.permalink())
+    .pipe(posts.dest('.'));
+});
+
+app.build('site', function(err) {
+  if (err) throw err;
+  console.log('done!');
+});
+```
+
