add breaking change notification

--- a/.verb.md
+++ b/.verb.md
@@ -1,3 +1,8 @@
+
+**HEADS UPS**
+
+- 0.5.0 has a breaking change. It will no longer immediately run the permalink when used on a view directly.
+
 ## Usage
 
 ```js
@@ -18,7 +23,7 @@ app.use(permalinks());
 // create a view collection
 app.create('pages');
 
-// add a page  
+// add a page
 app.page('a/b/c.txt', {content: '...'})
   .permalink(':name.html');
 
